# convenatAI

./: .dockerignore  .env.example  .gitignore  ARC_INTEGRATION.md  Dockerfile  IMPROVEMENT.md  INTENTREGISTRY_EXPLAINED.md  Procfile  README.md  demo_matching.py  fly.toml  genlayer_relay.py  koyeb.yaml  package.json  pyproject.toml  render.yaml  requirements.txt  run.py  scratch_check_wallets.py  serve.py  start.sh  test_e2e.py  test_genlayer.py  worker.py
bridge-contracts/: 4.5.0  hardhat.config.js  package-lock.json  package.json
cache/: solidity-files-cache.json
contracts/: BridgeForwarder.sol  BridgeReceiver.sol  ConvenatCommerce.sol  ConvenatContract.py  DEPLOY_GENLAYER.md  IntentRegistry.deployed.json  IntentRegistry.json  IntentRegistry.sol
convenatai/: __init__.py  agent.py  arc_identity.py  arc_integration.py  bridge_relay.py  circle_client.py  circle_executor.py  cli.py  contract.py  discovery.py  enforcement.py  genlayer_client.py  genlayer_wrapper.py  matching.py  negotiation.py  network.py  payment.py  run.py  service.py
dashboard/: .env.example  .env.production  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
deploy/: deploy_convenat.ts  deploy_to_bradbury.bat  package-lock.json  package.json
scripts/: .gen_ciphertext.mjs  check_balances.js  circle_executor.js  genlayer_bridge.js  genlayer_helper.js  go_live.sh  live_negotiate.py  negotiate.py  package-lock.json  package.json  setup_oci.py
tests/: test_agent.py  test_arc_identity.py  test_arc_integration.py  test_bridge_relay.py  test_genlayer_client.py  test_negotiation.py  test_negotiator_net.py  test_network.py  test_payment.py
(+62 files in other folders)
