[project]
name = "convenatai"
version = "0.1.0"
description = "Prototype economic nervous system for autonomous AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Kodark220/convenatAI"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
convenatai = "convenatai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["convenatai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
