[project]
name = "convenatai"
version = "0.1.0"
description = "Prototype economic nervous system for autonomous AI agents."
readme = "README.md"
    requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
circle = [
    "circle-developer-controlled-wallets>=1.0.0",
    "web3>=6.0.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.5.0",
    "cryptography>=41.0.0",
]
all = [
    "convenatai[circle]",
    "convenatai[server]",
]

[project.urls]
"Homepage" = "https://example.com/convenatAI"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
convenatai = "convenatai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["convenatai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
